2013-04-08  Filip Pizlo  <fpizlo@apple.com>

        REGRESSION(r146669): Assertion hit in JSC::DFG::SpeculativeJIT::fillSpeculateCell() running webgl tests
        https://bugs.webkit.org/show_bug.cgi?id=114129
        <rdar://problem/13594898>

        Reviewed by Darin Adler.
        
        The check to see if we need a cell check when simplifying a GetById or PutById needs to be hoisted to
        above where we abstractly execute the instruction, since after we abstracting execute it, it will
        seem like it no longer needs the cell check.

        * dfg/DFGConstantFoldingPhase.cpp:
        (JSC::DFG::ConstantFoldingPhase::foldConstants):

2013-04-07  Oliver Hunt  <oliver@apple.com>

        Add bounds checking for WTF::Vector::operator[]
        https://bugs.webkit.org/show_bug.cgi?id=89600

        Reviewed by Filip Pizlo.

        Make a few JSC classes opt-out of release mode bounds checking.

        * assembler/AssemblerBuffer.h:
        (AssemblerBuffer):
        * assembler/AssemblerBufferWithConstantPool.h:
        (AssemblerBufferWithConstantPool):
        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::CodeBlock):
        (JSC::CodeBlock::bytecodeOffset):
        (JSC):
        (JSC::replaceExistingEntries):
        * bytecode/CodeBlock.h:
        (JSC::CodeBlock::bytecodeOffsetForCallAtIndex):
        (JSC::CodeBlock::callReturnIndexVector):
        (JSC::CodeBlock::codeOrigins):
        (RareData):
        * bytecode/UnlinkedCodeBlock.h:
        (JSC::UnlinkedEvalCodeBlock::adoptVariables):
        (UnlinkedEvalCodeBlock):
        * bytecompiler/BytecodeGenerator.cpp:
        (JSC::BytecodeGenerator::BytecodeGenerator):
        (JSC::BytecodeGenerator::emitNewArray):
        (JSC::BytecodeGenerator::emitCall):
        (JSC::BytecodeGenerator::emitConstruct):
        * bytecompiler/BytecodeGenerator.h:
        (CallArguments):
        (JSC::BytecodeGenerator::instructions):
        (BytecodeGenerator):